--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Advice generator app - Frontend Mentor">
+  <meta name="description" content="Advice generator app - Mentor">
   <meta name="keywords" content="Advice generator app, Frontend Mentor">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
